--- a/style.css
+++ b/style.css
@@ -12,37 +12,20 @@ License URI: https://www.gnu.org/licenses/gpl-3.0.html
 Tags: flexible-header, custom-colors, custom-menu, custom-logo, editor-style, featured-images, rtl-language-support, threaded-comments, translation-ready
 */
 
-body {
-    font-family: "Red Hat Display";
-}
-
 .category-page{
     width: 60%;
     margin: 50px auto;
+    color: white;
+    font-family: 'Redhat Display';
 
-}
-
-img {
-    padding: 0.1em;
 }
 
 .category-title {
     font-size: 2.5rem;
-    color: #CB6015;
+    color: #ffffff;
     text-align: center;
     margin-bottom: 1.15em;
 
-}
-
-.blog-title {
-    color: #CB6015;
-    font-size: 2rem;
-    margin-inline: 25px;
-}
-
-p, .blog-title:hover {
-    color: #ffffff;
-    margin-inline: 25px;
 }
 
 
@@ -53,13 +36,25 @@ p, .blog-title:hover {
     gap: 1.75em;
 }
 
-.post {
+/* .post {
     border: solid white 1px;
     border-radius: 0.5em;
-}
+} */
 
-@media screen and (max-width: 700px){
+/* @media screen and (max-width: 700px){
     .container {
         grid-template-columns: 1fr;
     }
+} */
+
+p > a {
+    color: #CB6015;
+} 
+
+p > a:hover {
+    color: white;
+}
+
+.blog-title {
+    color: #CB6015;
 }
